Extras: add 403 Forbidden admin route and documentation
